# clang-tidy-qstringlist-include-warning

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
